[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/tiles.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tile.gd" type="Script" id=2]
[ext_resource path="res://sounds/error.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=4]
resource_name = "Drop"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ), Vector2( 0, 5 ), Vector2( 0, 20 ), Vector2( 0, 500 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.7, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "Land"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ), Vector2( 0, 12 ), Vector2( 0, 5 ), Vector2( 0, 8 ), Vector2( 0, 7 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 20 ), Vector2( 0, 0 ), Vector2( 0, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Tile" type="Node2D" groups=["Tile"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -500 )
texture = ExtResource( 1 )
hframes = 2
vframes = 5

[node name="Clicky" type="Area2D" parent="Sprite"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Sprite/Clicky"]
polygon = PoolVector2Array( 0, -18, 20, -7.5, 0, 3, -20, -7.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Drop = SubResource( 4 )
anims/Land = SubResource( 3 )
anims/Spawn = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
bus = "sfx"

[connection signal="input_event" from="Sprite/Clicky" to="." method="_on_Clicky_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
